updated the notebook and the slidess

--- a/workshops/dl-bioimaging/workshop-dl-bioimaging.ipynb
+++ b/workshops/dl-bioimaging/workshop-dl-bioimaging.ipynb
@@ -31,7 +31,7 @@
         "\n",
         "In this exercise, we will build a simple image classification model using a neural network to classify biomedical images into different categories. We will use the MedMNIST dataset for this purpose.\n",
         "\n",
-        "**NOTE:** In the menubar, go to `Runtime > Change runtime type` and select `T4 GPU` to be able to use GPU resources in this workshop."
+        "**NOTE:** In the menubar, go to `Runtime > Change runtime type` and select `CPU` for this exercise."
       ]
     },
     {
@@ -190,8 +190,7 @@
         "from tensorflow.keras.layers import Dense, Conv2D, MaxPooling2D, Flatten\n",
         "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
         "from tensorflow.keras.optimizers import Adam\n",
-        "from tensorflow.keras.utils import to_categorical\n",
-        "from sklearn.model_selection import train_test_split"
+        "from tensorflow.keras.utils import to_categorical"
       ]
     },
     {
@@ -307,7 +306,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### 6. Train the model"
+        "### 6. Train the model\n",
+        "\n",
+        "Training for 5 epochs will take about 5-10 minutes when using a CPU kernel."
       ]
     },
     {
@@ -332,7 +333,7 @@
       "source": [
         "history = model.fit(\n",
         "    train_generator,\n",
-        "    epochs=10,\n",
+        "    epochs=5,\n",
         "    validation_data=val_generator\n",
         ")"
       ]
@@ -461,11 +462,11 @@
       ],
       "source": [
         "# calculate the confusion matrix\n",
-        "cm = confusion_matrix(test_true, test_preds)\n",
+        "cm = confusion_matrix(test_true, test_predictions)\n",
         "\n",
         "# plot the confusion matrix\n",
         "plt.figure(figsize=(5, 5))\n",
-        "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', cbar=False)\n",
+        "sns.heatmap(cm, annot=True, fmt='d', cmap='Oranges', cbar=False)\n",
         "plt.xlabel('Predicted labels')\n",
         "plt.ylabel('True labels')\n",
         "plt.show()"
@@ -479,7 +480,7 @@
         "\n",
         "In this exercise, we will learn how to use Fiji (ImageJ) and deep learning models using plugins like `DeepImageJ` and model repositories such as `Bioimage.io`.\n",
         "\n",
-        "Please follow the instructions in the Workshop slides to complete this exercise.\n",
+        "Please follow the **instructions in the Workshop slides** to complete this exercise.\n",
         "\n",
         "You'll learn:\n",
         "- How to download and run Fiji (ImageJ)\n",
@@ -498,7 +499,9 @@
       "source": [
         "## Exercise 3: Image Segmentation with U-Net (Google Colab)\n",
         "\n",
-        "In this exercise, we will build a U-Net model for image segmentation using the Kvasir-SEG dataset, which contains gastrointestinal polyp images and their corresponding segmentation masks."
+        "In this exercise, we will build a U-Net model for image segmentation using the Kvasir-SEG dataset, which contains gastrointestinal polyp images and their corresponding segmentation masks.\n",
+        "\n",
+        "**NOTE:** In the menubar, go to `Runtime > Change runtime type` and select `T4 GPU` for this and the next exercise."
       ]
     },
     {
@@ -800,7 +803,7 @@
       "source": [
         "### Train the model\n",
         "\n",
-        "Now, we will train the model using the training data."
+        "Now, we will train the model using the training data. Training for 25 epochs would have taken about an hour on a CPU kernel, hence we are using a **GPU kernel**. On a GPU kernel, this takes about a minute."
       ]
     },
     {
@@ -858,7 +861,7 @@
         }
       ],
       "source": [
-        "plt.figure(figsize=(12, 4))\n",
+        "plt.figure(figsize=(9, 3))\n",
         "plt.subplot(1, 2, 1)\n",
         "plt.plot(history.history['accuracy'], label='Training Accuracy')\n",
         "plt.plot(history.history['val_accuracy'], label='Validation Accuracy')\n",
@@ -916,9 +919,9 @@
         }
       ],
       "source": [
-        "def display_results(model, images, labels, num_samples=5):\n",
+        "def display_results(model, images, labels, num_samples=10):\n",
         "    predictions = model.predict(images)\n",
-        "    fig, axes = plt.subplots(num_samples, 3, figsize=(6, 9))\n",
+        "    fig, axes = plt.subplots(num_samples, 3, figsize=(6, 18))\n",
         "\n",
         "    for i in range(num_samples):\n",
         "        axes[i, 0].imshow(images[i].reshape(64, 64, 3))\n",
@@ -941,6 +944,11 @@
       "source": [
         "## Exercise 4: Denoising using CARE (via ZeroCostDL4Mic)\n",
         "\n",
+        "### DO THIS FIRST: Steps to upload denoising dataset to your Google Drive.\n",
+        "1. Click [this link](https://zenodo.org/records/5750174/files/Denoising_Dataset.zip?download=1) to download the Denoising dataset to your local computer.\n",
+        "2. Extract the downloaded zip file to your local computer.\n",
+        "3. In your Google Drive page in your browser, go to `+ New > Folder upload` and upload the extracted `Denoising_Dataset` folder.\n",
+        "\n",
         "In this exercise, we will use the CARE (Content-Aware Image Restoration) neural network to denoise biomedical images. We will follow the Notebook implementation of ZeroCostDL4Mic directly, a platform that provides free access to deep learning models for bioimaging.\n",
         "\n",
         "1. Please click [here](https://colab.research.google.com/github/HenriquesLab/ZeroCostDL4Mic/blob/master/Colab_notebooks/CARE_2D_ZeroCostDL4Mic.ipynb) to open the ZeroCostDL4Mic notebook in a new Google Colab window.\n",
@@ -949,25 +957,31 @@
         "This is because you can only run one notebook at a time on the free tier.\n",
         "3. Create a copy of the ZeroCostDL4Mic notebook.  \n",
         "`File > Save a copy in Drive`.\n",
-        "4. Follow the instructions in the ZeroCostDL4Mic notebook.\n",
-        "\n",
-        "### Steps to upload denoising dataset to your Google Drive.\n",
-        "1. Click [this link](https://zenodo.org/records/5750174/files/Denoising_Dataset.zip?download=1) to download the Denoising dataset to your local computer.\n",
-        "2. Extract the downloaded zip file to your local computer.\n",
-        "3. In your Google Drive page in your browser, go to `+ New > Folder upload` and upload the extracted `Denoising_Dataset` folder.\n",
+        "4. Connect to the `T4 GPU` runtime in the ZeroCostDL4Mic notebook. Not in this notebook. Training for 50 epochs takes about 2 minutes on a GPU kernel.\n",
+        "5. Follow the instructions in the ZeroCostDL4Mic notebook. Just run all the cells one by one starting from Section 1.1. You'll need to change a few things along the way as mentioned below.\n",
         "\n",
         "### Things to change/enter in the notebook:\n",
         "\n",
-        "You might need to adjust some of these based on where you uploaded the dataset in your Google Drive.\n",
+        "You might need to adjust some of these based on where you uploaded the dataset in your Google Drive. Leave all other settings as they are in the notebook.\n",
         "\n",
-        "```python\n",
-        "    Training_source: /content/gdrive/MyDrive/Denoising_Dataset/Training/low\n",
-        "    Training_target: /content/gdrive/MyDrive/Denoising_Dataset/Training/high\n",
-        "    model_name: denoising_model\n",
-        "    model_path: /content/gdrive/MyDrive/Denoising_Dataset/Results\n",
-        "    number_of_epochs: 1 # you can increase this number if you have time and/or you are connected to the GPU kernel\n",
-        "    Use_Data_augmentation: # check this box\n",
-        "```"
+        "- **Section 3.1**  \n",
+        "Training_source: `/content/gdrive/MyDrive/Denoising_Dataset/Training/low`  \n",
+        "Training_target: `/content/gdrive/MyDrive/Denoising_Dataset/Training/high`  \n",
+        "model_name: `denoising_model`  \n",
+        "model_path: `/content/gdrive/MyDrive/Denoising_Dataset/Results`  \n",
+        "number_of_epochs: `5` you can increase/decrease this number depending on whether or not you are connected to a GPU kernel and/or if you have time`  \n",
+        "\n",
+        "- **Section 4.2** (Important)  \n",
+        "Change lr to learning_rate in this line  \n",
+        "`writer.writerow([history.history['loss'][i], history.history['val_loss'][i], history.history['learning_rate'][i]])`  \n",
+        "\n",
+        "- **Section 5.2**  \n",
+        "Source_QC_folder: `/content/gdrive/MyDrive/Denoising_Dataset/test/Low`  \n",
+        "Target_QC_folder: `/content/gdrive/MyDrive/Denoising_Dataset/test/High`  \n",
+        "\n",
+        "- **Section 6.1**  \n",
+        "Data_folder: `/content/gdrive/MyDrive/Denoising_Dataset/test/Low`  \n",
+        "Result_folder: `/content/gdrive/MyDrive/Denoising_Dataset/Results`"
       ]
     }
   ],
