added pre-workshop prep section

--- a/workshops/dl-bioimaging/workshop-dl-bioimaging.ipynb
+++ b/workshops/dl-bioimaging/workshop-dl-bioimaging.ipynb
@@ -23,6 +23,18 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Pre-workshop preparation\n",
+        "\n",
+        "Steps to upload denoising dataset to your Google Drive.\n",
+        "1. Click [this link](https://zenodo.org/records/5750174/files/Denoising_Dataset.zip?download=1) to download the Denoising dataset to your local computer.\n",
+        "2. Extract the downloaded zip file to your local computer.\n",
+        "3. In your Google Drive page in your browser, go to `+ New > Folder upload` and upload the extracted `Denoising_Dataset` folder."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "0BSqVcGFbMTn"
       },
@@ -696,10 +708,7 @@
       "source": [
         "## Exercise 4: Denoising using CARE (via ZeroCostDL4Mic)\n",
         "\n",
-        "### DO THIS FIRST: Steps to upload denoising dataset to your Google Drive.\n",
-        "1. Click [this link](https://zenodo.org/records/5750174/files/Denoising_Dataset.zip?download=1) to download the Denoising dataset to your local computer.\n",
-        "2. Extract the downloaded zip file to your local computer.\n",
-        "3. In your Google Drive page in your browser, go to `+ New > Folder upload` and upload the extracted `Denoising_Dataset` folder.\n",
+        "**NOTE:** You should have the Denoising_Dataset folder already uploaded to your Google Drive (see pre-workshop preparation section at the top).\n",
         "\n",
         "In this exercise, we will use the CARE (Content-Aware Image Restoration) neural network to denoise biomedical images. We will follow the Notebook implementation of ZeroCostDL4Mic directly, a platform that provides free access to deep learning models for bioimaging.\n",
         "\n",
