finalized the notebook

--- a/workshops/dl-bioimaging/workshop-dl-bioimaging.ipynb
+++ b/workshops/dl-bioimaging/workshop-dl-bioimaging.ipynb
@@ -43,7 +43,7 @@
         "\n",
         "In this exercise, we will build a simple image classification model using a neural network to classify biomedical images into different categories. We will use the MedMNIST dataset for this purpose.\n",
         "\n",
-        "**NOTE:** In the menubar, go to `Runtime > Change runtime type` and select `CPU` for this exercise."
+        "**NOTE:** In the menubar, go to `Runtime > Change runtime type` and select `T4 GPU` for the **entirety of this workshop**."
       ]
     },
     {
@@ -252,7 +252,7 @@
       "source": [
         "### 6. Train the model\n",
         "\n",
-        "Training for 5 epochs will take about 5-10 minutes when using a CPU kernel."
+        "You can train for 20-50 epochs on a GPU inside of 5 minutes. Training for 5 epochs will take about 5-10 minutes when using a CPU kernel."
       ]
     },
     {
@@ -269,7 +269,7 @@
       "source": [
         "history = model.fit(\n",
         "    train_generator,\n",
-        "    epochs=5,\n",
+        "    epochs=20,\n",
         "    validation_data=val_generator\n",
         ")"
       ]
@@ -376,7 +376,7 @@
         "- How to use Bioimage.io model repository to download pre-trained deep learning models\n",
         "- How to run deep learning models to your images\n",
         "\n",
-        "**Author's note**: There are many pros and cons of using Fiji and plugins such as DeepImageJ. This is a quick way to get started with deep learning in bioimaging without writing any code. This is also a good way to stay up-to-date on popular tasks and models in the BioImaging community. However, you will soon realize that many of these models become outdated and incompatible (because of various software and environment that end users use) quickly and might be overly-complicated for your need because they try to generalize to a larger audience. The last point is especially true for open source deep-learning tools such as ZeroCostDL4Mic (covered later in the workshop). As you will learn in this workshop, it is possible to write simple, clean and effective Python code for your own project using libraries like TensorFlow, PyTorch, etc. to carry out similar tasks."
+        "**Author's note** (read after the workshop): There are many pros and cons of using Fiji and plugins such as DeepImageJ. This is a quick way to get started with deep learning in bioimaging without writing any code. This is also a good way to stay up-to-date on popular tasks and models in the BioImaging community. However, you will soon realize that many of these models become outdated and incompatible (because of various software and environment that end users use) quickly and might be overly-complicated for your need because they try to generalize to a larger audience. The last point is especially true for open source deep-learning tools such as ZeroCostDL4Mic (covered later in the workshop). As you will learn in this workshop, it is possible to write simple, clean and effective Python code for your own project using libraries like TensorFlow, PyTorch, etc. to carry out similar tasks."
       ]
     },
     {
@@ -387,9 +387,7 @@
       "source": [
         "## Exercise 3: Image Segmentation with U-Net (Google Colab)\n",
         "\n",
-        "In this exercise, we will build a U-Net model for image segmentation using the Kvasir-SEG dataset, which contains gastrointestinal polyp images and their corresponding segmentation masks.\n",
-        "\n",
-        "**NOTE:** In the menubar, go to `Runtime > Change runtime type` and select `T4 GPU` for this and the next exercise."
+        "In this exercise, we will build a U-Net model for image segmentation using the Kvasir-SEG dataset, which contains gastrointestinal polyp images and their corresponding segmentation masks."
       ]
     },
     {
@@ -706,7 +704,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Exercise 4: Denoising using CARE (via ZeroCostDL4Mic)\n",
+        "## [Optional] Exercise 4: Denoising using CARE (via ZeroCostDL4Mic)\n",
         "\n",
         "**NOTE:** You should have the Denoising_Dataset folder already uploaded to your Google Drive (see pre-workshop preparation section at the top).\n",
         "\n",
