--- a/workshops/vlms/workshop-vlms.ipynb
+++ b/workshops/vlms/workshop-vlms.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -35,7 +34,9 @@
       "source": [
         "## Before you begin\n",
         "\n",
-        "While I highly recommend to use your own images during the exercises, you are welcome to (also) use the ones I am using. You can download them from our [GitHub repo](https://github.com/pv-is-nrt/aimrc-data-science-core/blob/main/workshops/vlms/sample_images.zip). Be sure to unzip the file after downloading."
+        "While I highly recommend to use your own images during the exercises, you are welcome to use the ones I am using. You can download them from our [GitHub repo](https://github.com/pv-is-nrt/aimrc-data-science-core/blob/main/workshops/vlms/sample_images.zip). Be sure to unzip the file after downloading.\n",
+        "\n",
+        "You can also download images from [Pexels](https://www.pexels.com/) or [Google Image Search](https://images.google.com/)."
       ],
       "metadata": {
         "id": "LevbXHLMM6oX"
@@ -348,17 +349,42 @@
         "print(\"Please upload an image:\")\n",
         "image = upload_image()\n",
         "\n",
-        "# Ask a question about the image\n",
-        "question = \"Is this image taken indoors or outdoors?\"\n",
-        "\n",
         "# Provide possible answers\n",
-        "possible_answers = [\"outdoors\", \"indoors\", \"unclear\"]\n",
+        "possible_answers = [\"outdoors\", \"indoors\", \"unclear\"] # EDIT THIS!!!\n",
         "answer = generate_answer(image, possible_answers)\n",
         "\n",
         "print(f\"Generated Answer: {answer}\")"
       ],
       "metadata": {
         "id": "Y4AvXJXyAotk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "You can also perform **more elaborate** classifications."
+      ],
+      "metadata": {
+        "id": "g7OqcX9oMoQp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Please upload an image:\")\n",
+        "image = upload_image()\n",
+        "possible_answers = [\n",
+        "    \"a microscope image of powder\",\n",
+        "    \"a microscope image of a metal surface\",\n",
+        "    \"unclear\"\n",
+        "]\n",
+        "answer = generate_answer(image, possible_answers)\n",
+        "print(f\"Generated Answer: {answer}\")"
+      ],
+      "metadata": {
+        "id": "zzxpXBbBMkzQ"
       },
       "execution_count": null,
       "outputs": []
@@ -445,7 +471,7 @@
       "source": [
         "### 3. Download the pretrained SAM model\n",
         "\n",
-        "And specify SAM to use this model. SAM weighs about 200 MBs."
+        "And specify SAM to use this model. SAM weighs about 2.4 GBs."
       ],
       "metadata": {
         "id": "dOVh395kQz4r"
@@ -609,7 +635,7 @@
         "    # you can also print the fraction of the image area that the mask occupies\n",
         "    mask_area = masks[i]['area']\n",
         "    fraction_area = np.round(mask_area * 100 / image_area, 2)\n",
-        "    print(\"mask\", str(i), \"area:\", mask_area, \"\\tfraction:\", fraction_area)\n",
+        "    print(\"mask\", str(i), \"\\tarea:\", mask_area, \"\\tfraction:\", fraction_area)\n",
         "\n",
         "plt.axis('off')\n",
         "plt.show()"
